tests/semantic/type_system6/type_system6.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

//
// Type System 6
//
// Check if implicit conversion fails, where expected
//

// float can't be promoted to a number.
.decl FloatConv(x: number)
FloatConv(1.0).
FloatConv(1 + 1.0) :- true.


.output FloatConv
